--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="left-header">
             <h1>Jonathan de Jesus Trejo Gomez</h1>
             <h2>Ingeniero en Sistemas Computacionales</h2>
-            <p>Crear productos de software de calidad internacional</p>
+            <p>Crear productos de software de calidad</p>
         </div>
         <div class="center-header">
             <img src="/img/jona_cv.png" alt="">
